<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:baiduadsdk="http://schemas.android.com/apk/res/com.acmsong.susustomach"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffff99"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff99"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/morning"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_illnesstip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/illnesstip"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_fiveheal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/fiveheal"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_normalfood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/normalfood"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_threeseven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/threeseven"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_stopeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/stopeat"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_everyillness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/everyillness"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_warnthing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/warnthing"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_raremethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/raremethod"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_dayhealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dayhealth"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_dontsix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dontsix"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_errorfour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/errorfour"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_bean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/bean"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_irritatefood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/irritatefood"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#000000"
                android:textSize="50.0dip" />
        </LinearLayout>
    </ScrollView>

    <com.baidu.mobads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        baiduadsdk:adId=""
        baiduadsdk:adSize="0" />

</RelativeLayout>