<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:baiduadsdk="http://schemas.android.com/apk/res/com.acmsong.susustomach"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffff99"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff99"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_simpleaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/simpleaction"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_coldaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/coldaction"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_toeaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/toeaction"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_twelveaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/twelveaction"
                android:textColor="#000000"
                android:textSize="25.0dip" />

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#000000"
                android:textSize="50.0dip" />
        </LinearLayout>
    </ScrollView>

    <com.baidu.mobads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        baiduadsdk:adId=""
        baiduadsdk:adSize="0" />

</RelativeLayout>